--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
-<body>
+<body> 
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+
             <div class="container-fluid">
                 <a class="navbar-brand text-primary-emphasis" href="#">Me in Web</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,15 +57,15 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#contact">
                                 Contact
-                                <i class="fas fa-file-contract"></i>
+                                <i class="fas fa-file-contrast"></i>
                             </a>
                         </li>
                     </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <form class="d-flex text-primary-emphasis" role="search">
+                        <label class="me-2">RAJAOHERISOA Maminiaina Ando</label>
                         <button class="btn btn-outline-primary" type="submit">
-                            Search
-                            <i class="fas fa-search"></i>
+                            CV
+                            <i class="fas fa-download"></i>
                         </button>
                     </form>
                 </div>
@@ -75,10 +76,10 @@
         <section id="about" class="py-5 bg-light">
             <div class="container">
                 <div class="row align-items-center justify-content-center">
-                    <div class="col-12 col-md-4 mb-4 mb-md-0 text-center">
+                    <div class="col-12 col-md-4 mb-4 mb-md-0 text-center" data-aos="fade-up-right" >
                         <img src="./images/me.png" alt="My Photo" class="img-fluid rounded-circle shadow mx-auto d-block" style="max-width: 200px;">
                     </div>
-                    <div class="col-12 col-md-8">
+                    <div class="col-12 col-md-8" data-aos="fade-up-left">
                         <h1 class="animate__rubberBand display-4 mb-4 text-center text-md-start">My Academic Career</h1>
                         <div class="accordion" id="accordionPanelsStayOpenExample">
                             <div class="accordion-item">
@@ -109,8 +110,7 @@
                     </div>
                 </div>
             </div>
-        </section>
-        
+        </section>     
         <section class="hero-section" id="project">
           <div class="container">
               <div class="row">
@@ -249,7 +249,9 @@
             </div>
           <div class="container">
               <div class="row">
-                  <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
+                  <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0" data-aos="flip-left"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="2000">
                       <div class="custom-block custom-block-overlay">
                           <a href="detail-page.html" class="custom-block-image-wrap">
                               <img src="../images/physician-consulting-his-patient-clinic.jpg" class="custom-block-image img-fluid" alt="">
@@ -257,7 +259,7 @@
 
                           <div class="custom-block-info custom-block-overlay-info">
                               <h5 class="mb-1">
-                                  <a href="listing-page.html">
+                                  <a class="title-service">
                                       amelioration de site
                                   </a>
                               </h5>
@@ -267,7 +269,9 @@
                       </div>
                   </div>
 
-                  <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
+                  <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0" data-aos="flip-right"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="2000">
                       <div class="custom-block custom-block-overlay">
                           <a href="detail-page.html" class="custom-block-image-wrap">
                               <img src="../images/repairman-doing-air-conditioner-service.jpg" class="custom-block-image img-fluid" alt="">
@@ -275,7 +279,7 @@
 
                           <div class="custom-block-info custom-block-overlay-info">
                               <h5 class="mb-1">
-                                  <a href="listing-page.html">
+                                  <a class="title-service">
                                       interface ui
                                   </a>
                               </h5>
@@ -285,7 +289,9 @@
                       </div>
                   </div>
 
-                  <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
+                  <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0" data-aos="flip-left"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="2000">
                       <div class="custom-block custom-block-overlay">
                           <a href="detail-page.html" class="custom-block-image-wrap">
                               <img src="../images/woman-practicing-yoga-mat-home.jpg" class="custom-block-image img-fluid" alt="">
@@ -293,7 +299,7 @@
 
                           <div class="custom-block-info custom-block-overlay-info">
                               <h5 class="mb-1">
-                                  <a href="listing-page.html">
+                                  <a class="title-service">
                                      gestion de logique 
                                   </a>
                               </h5>
@@ -303,7 +309,9 @@
                       </div>
                   </div>
 
-                  <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
+                  <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0" data-aos="flip-right"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="2000">
                       <div class="custom-block custom-block-overlay">
                           <a href="detail-page.html" class="custom-block-image-wrap">
                               <img src="../images/delicious-meal-with-sambal-arrangement.jpg" class="custom-block-image img-fluid" alt="">
@@ -311,7 +319,7 @@
 
                           <div class="custom-block-info custom-block-overlay-info">
                               <h5 class="mb-1">
-                                  <a href="listing-page.html">
+                                  <a class="title-service">
                                       manipulation de donée
                                   </a>
                               </h5>
@@ -324,7 +332,7 @@
               </div>
           </div>
         </section>
-        <section id="contact" class="bg-light py-8">
+        <section id="contact" class="bg-light py-8" data-aos="zoom-in-up">
             <div class="container">
                 <div class="section-title-wrap mb-5 text-center">
                     <h4 class="section-title text-secondary">Contact <span class=" text-primary">us</span></h4>
@@ -398,8 +406,8 @@
                     <p>© 2025 Ngourndii-dev . All rights reserved.</p>
                 </div>
             </div>
-            <button onclick="topFunction()" id="back-to-top" class="btn btn-primary rounded-circle" data-aos="fade-up">
-                <i class="bi bi-arrow-up"></i>
+            <button id="back-to-top" class="btn btn-primary rounded-circle" data-aos="fade-up">
+                <a href="#about"><i class="bi bi-arrow-up"></i></a>
             </button>
         </div>
     </footer>
