--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-dRNH6wFiYfDWc4+9Ep3j5BlgJQvZp0cK+ov9sK7I4tXuFj4YrL+lNQaTxEhgFswRIcZbXHVy6VqtJvHu1R8V4g==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
@@ -379,34 +378,35 @@
                                 <h4>Perfect school</h4>
                                 <p>Website developed with react and tailindcss</p>
                                 <ul>
-                                    <li><a href="#">👨‍💻</a></li>
-                                    <li><a href="#">🚀</a></li>
+                                    <li><a href="https://github.com/Ngourndii-dev/my-school.git">👨‍💻</a></li>
+                                    <li><a href="https://my-school-bice.vercel.app/">🚀</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="project-card">
-                            <img src="./images/lamody.png" alt="Projet 2" class="img-fluid">
+                            <img src="./images/eventSphere.png" alt="Projet 2" class="img-fluid">
                             <div class="project-overlay">
-                                <h4>Lamaody</h4>
-                                <p>Website developed with css and a few templates</p>
+                                <h4>EventSphere</h4>
+                                <p>Website developed with next js and express</p>
                                 <ul>
-                                    <li><a href="#">👨‍💻</a></li>
-                                    <li><a href="#">🚀</a></li>
-                                </ul>
+                                    <li><a href="https://github.com/Ngourndii-dev/event-sphere">👨‍💻</a></li>
+                                    <li><a href="https://event-static-7j9b1r4ff-exam1.vercel.app/">👁️ </a></li>
+                                    <li><a href="https://drive.google.com/file/d/1YWWwNGPXr6gtYxWxEZ4Ly4UeEv8w_lkT/view?usp=drive_link">🎥 </a></li>
+                                </ul> 
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="project-card">
-                            <img src="./images/api.png" alt="Projet 3" class="img-fluid">
+                            <img src="./images/music.png" alt="Projet 3" class="img-fluid">
                             <div class="project-overlay">
-                                <h4>ecommerce-api</h4>
-                                <p>APi spring boot e-commerce </p>
+                                <h4>iainoKalo</h4>
+                                <p>application music </p>
                                 <ul>
-                                    <li><a href="#">👨‍💻</a></li>
-                                    <li><a href="#">🚀</a></li>
+                                    <li><a href="https://github.com/Ngourndii-dev/iAinoKalo">👨‍💻</a></li>
+                                    <li><a href="https://drive.google.com/file/d/1QdPcq13yTzT-FgYV9nhk-IKGTmAnX9RA/view?usp=drive_link">🎥 </a></li>
                                 </ul>
                             </div>
                         </div>
@@ -417,28 +417,29 @@
                         <div class="project-card">
                             <img src="./images/zoo.png" alt="Projet 4" class="img-fluid">
                             <div class="project-overlay">
-                                <h4>My-zoo</h4>
-                                <p>Creation of a user interface for a zoo website with Next.js 
+                                <h4>Pawcare</h4>
+                                <p>Creation of a user interface for a zoo website with Next.js + spring
                                     and an interactive dashboard for administrators with React Admin.
                                 </p>
                                 <ul>
-                                    <li><a href="#">👨‍💻</a></li>
-                                    <li><a href="#">🚀</a></li>
+                                    <li><a href="https://github.com/Ngourndii-dev/my-zoo">👨‍💻</a></li>
+                                    <li><a href="https://pawcare-static-k1pc0th01-exam1.vercel.app/">👁️ </a></li>
+                                    <li><a href="https://drive.google.com/file/d/1K2YRSEEwu_oGdQe_A40S8p6sAvlNXRCO/view?usp=sharing">🎥 </a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="project-card">
-                            <img src="./images/pollua.png" alt="Projet 5" class="img-fluid">
+                            <img src="./images/tsinjara.png" alt="Projet 5" class="img-fluid">
                             <div class="project-overlay">
-                                <h4>Car-show</h4>
+                                <h4>Tsinjara</h4>
                                 <p>
-                                    Full Stack project with Collaboration
+                                    Website developed with Next.js for wallet management.
                                 </p>
                                 <ul>
-                                    <li><a href="#">👨‍💻</a></li>
-                                    <li><a href="#">🚀</a></li>
+                                    <li><a href="https://github.com/Ngourndii-dev/tsinjara-web-static">👨‍💻</a></li>
+                                    <li><a href="https://tsinjara-web-static-inn1ff7pa-exam1.vercel.app/">🚀</a></li>
                                 </ul>
                             </div>
                         </div>
