--- a/index.html
+++ b/index.html
@@ -389,11 +389,10 @@
                             <img src="./images/eventSphere.png" alt="Projet 2" class="img-fluid">
                             <div class="project-overlay">
                                 <h4>EventSphere</h4>
-                                <p>Website developed with next js and express</p>
+                                <p>Website developed with next js and express , deploy with railway and vercel</p>
                                 <ul>
                                     <li><a href="https://github.com/Ngourndii-dev/event-sphere">👨‍💻</a></li>
-                                    <li><a href="https://event-static-7j9b1r4ff-exam1.vercel.app/">👁️ </a></li>
-                                    <li><a href="https://drive.google.com/file/d/1YWWwNGPXr6gtYxWxEZ4Ly4UeEv8w_lkT/view?usp=drive_link">🎥 </a></li>
+                                    <li><a href="https://eventsphere-hkl08xqm3-exam1.vercel.app/">🚀</a></li>
                                 </ul> 
                             </div>
                         </div>
