--- a/index.html
+++ b/index.html
@@ -391,8 +391,9 @@
                                 <h4>EventSphere</h4>
                                 <p>Website developed with next js and express , deploy with railway and vercel</p>
                                 <ul>
-                                    <li><a href="https://github.com/Ngourndii-dev/event-sphere">👨‍💻</a></li>
+                                    <li><a href="https://github.com/Ngourndii-dev/event-sphere-back.git">⚙️</a></li>
                                     <li><a href="https://eventsphere-hkl08xqm3-exam1.vercel.app/">🚀</a></li>
+                                    <li><a href="https://github.com/Ngourndii-dev/event-sphere-front.git">🎨</a></li>
                                 </ul> 
                             </div>
                         </div>
