--- a/index.html
+++ b/index.html
@@ -435,11 +435,11 @@
                             <div class="project-overlay">
                                 <h4>Tsinjara</h4>
                                 <p>
-                                    Website developed with Next.js for wallet management.
+                                    Manage your money and website smarter — powered by Next.js.
                                 </p>
                                 <ul>
-                                    <li><a href="https://github.com/Ngourndii-dev/tsinjara-web-static">👨‍💻</a></li>
-                                    <li><a href="https://tsinjara-web-static-inn1ff7pa-exam1.vercel.app/">🚀</a></li>
+                                    <li><a href="https://github.com/Ngourndii-dev/tsinjara.git">👨‍💻</a></li>
+                                    <li><a href="https://tsinjara-f030gnmk2-exam1.vercel.app/">🚀</a></li>
                                 </ul>
                             </div>
                         </div>
