--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                                 </p>
                                 <ul>
                                     <li><a href="https://github.com/Ngourndii-dev/tsinjara.git">👨‍💻</a></li>
-                                    <li><a href="https://tsinjara-f030gnmk2-exam1.vercel.app/">🚀</a></li>
+                                    <li><a href="https://tsinjara.vercel.app/">🚀</a></li>
                                 </ul>
                             </div>
                         </div>
