--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ma portfolio 👨‍💻</title>
+    <title>RMA 👨‍💻</title>
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -113,7 +113,7 @@
                     </div>
                 </div>
                 
-                <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 g-4" id="skills-container">
+                <div class="row row-cols-1 row-cols-md-3 row-cols-lg-5 g-5" id="skills-container">
                     <div class="col skill-item" data-category="frontend">
                         <div class="card skill-card h-100 shadow-sm hover-shadow-lg transition-all" style="border: 2px solid #0d1b2a; background-color: #ffffff;">
                             <div class="card-body text-center py-4">
