a to target blank

--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@
                                 <h4>Perfect school</h4>
                                 <p>Website developed with react and tailindcss</p>
                                 <ul>
-                                    <li><a href="https://github.com/Ngourndii-dev/my-school.git">👨‍💻</a></li>
-                                    <li><a href="https://my-school-bice.vercel.app/">🚀</a></li>
+                                    <li><a href="https://github.com/Ngourndii-dev/my-school.git" target="_blank">👨‍💻</a></li>
+                                    <li><a href="https://my-school-bice.vercel.app/" target="_blank">🚀</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -391,9 +391,9 @@
                                 <h4>EventSphere</h4>
                                 <p>Website developed with next js and express , deploy with railway and vercel</p>
                                 <ul>
-                                    <li><a href="https://github.com/Ngourndii-dev/event-sphere-back.git">⚙️</a></li>
-                                    <li><a href="https://eventsphere-hkl08xqm3-exam1.vercel.app/">🚀</a></li>
-                                    <li><a href="https://github.com/Ngourndii-dev/event-sphere-front.git">🎨</a></li>
+                                    <li><a href="https://github.com/Ngourndii-dev/event-sphere-back.git" target="_blank">⚙️</a></li>
+                                    <li><a href="https://eventsphere-hkl08xqm3-exam1.vercel.app/" target="_blank">🚀</a></li>
+                                    <li><a href="https://github.com/Ngourndii-dev/event-sphere-front.git" target="_blank">🎨</a></li>
                                 </ul> 
                             </div>
                         </div>
@@ -405,8 +405,8 @@
                                 <h4>iainoKalo</h4>
                                 <p>application music </p>
                                 <ul>
-                                    <li><a href="https://github.com/Ngourndii-dev/iAinoKalo">👨‍💻</a></li>
-                                    <li><a href="https://drive.google.com/file/d/1QdPcq13yTzT-FgYV9nhk-IKGTmAnX9RA/view?usp=drive_link">🎥 </a></li>
+                                    <li><a href="https://github.com/Ngourndii-dev/iAinoKalo" target="_blank">👨‍💻</a></li>
+                                    <li><a href="https://drive.google.com/file/d/1QdPcq13yTzT-FgYV9nhk-IKGTmAnX9RA/view?usp=drive_link" target="_blank">🎥 </a></li>
                                 </ul>
                             </div>
                         </div>
@@ -422,9 +422,9 @@
                                     and an interactive dashboard for administrators with React Admin.
                                 </p>
                                 <ul>
-                                    <li><a href="https://github.com/Ngourndii-dev/my-zoo">👨‍💻</a></li>
-                                    <li><a href="https://pawcare-static-k1pc0th01-exam1.vercel.app/">👁️ </a></li>
-                                    <li><a href="https://drive.google.com/file/d/1K2YRSEEwu_oGdQe_A40S8p6sAvlNXRCO/view?usp=sharing">🎥 </a></li>
+                                    <li><a href="https://github.com/Ngourndii-dev/my-zoo" target="_blank">👨‍💻</a></li>
+                                    <li><a href="https://pawcare-static-k1pc0th01-exam1.vercel.app/" target="_blank">👁️ </a></li>
+                                    <li><a href="https://drive.google.com/file/d/1K2YRSEEwu_oGdQe_A40S8p6sAvlNXRCO/view?usp=sharing" target="_blank">🎥 </a></li>
                                 </ul>
                             </div>
                         </div>
@@ -438,8 +438,8 @@
                                     Manage your money and website smarter — powered by Next.js.
                                 </p>
                                 <ul>
-                                    <li><a href="https://github.com/Ngourndii-dev/tsinjara.git">👨‍💻</a></li>
-                                    <li><a href="https://tsinjara.vercel.app/">🚀</a></li>
+                                    <li><a href="https://github.com/Ngourndii-dev/tsinjara.git" target="_blank">👨‍💻</a></li>
+                                    <li><a href="https://tsinjara.vercel.app/" target="_blank">🚀</a></li>
                                 </ul>
                             </div>
                         </div>
