a to target blank

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <form class="d-flex text-primary-emphasis" role="search">
                         <label class="me-2">RAJAOHERISOA Maminiaina Ando</label>
                         <button class="btn btn-outline-primary" type="submit">
-                            <a id="cv" href="https://www.canva.com/design/DAGgC_zjAfw/dAkifTQ84zgcUiR9dFaRXA/edit?utm_content=DAGgC_zjAfw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">CV</a>
+                            <a id="cv" target="_blank" href="https://www.canva.com/design/DAGgC_zjAfw/dAkifTQ84zgcUiR9dFaRXA/edit?utm_content=DAGgC_zjAfw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">CV</a>
                             <i class="fas fa-download"></i>
                         </button>
                     </form>
